# rs-testsuite

./: .gitignore  .licenserc.yaml  .pre-commit-config.yaml  .pylintrc  README.md  export.sh  jira_conf.py  jira_export.py  jira_export_features.py  jira_import_test_execution.py  jira_utils.py  pyproject.toml  requirements.txt  run_tests.sh  stac-check-config-auxip.yaml  stac-check-config-cadip.yaml  stac-check-config-catalog.yaml  stac-check-config-prip.yaml  temp_snippets.py
.github/workflows/: check-code-quality.yml  run-test-execution.yml
features/JsonSchema/: artifactFilter.json  flowRun.json  state.json
features/steps/: apikey.py  behave_types.py  catalog.py  endpoint.py  endpoints.py  github.py  json_utils.py  prefect.py  prefect_steps.py  prometheus.py  rs_server.py  s3.py  service.py  stac.py  staging.py  tutorial.py  wait.py
flows/: create_deployment.py  flow_create_collection.py  flow_template.py  hello_world.py
flows/generic/: flow_generic_retrieve_session.py
flows/on_demand/: flow_dpr_process.py  flow_session_stage.py
flows/operation/: flow_data_life_cycle.py  flow_osam_align_account.py  flow_osam_obs_account.py
flows/systematic/: flow_retrieve_s1_session.py  flow_s1_aio.py
flows/systematic/s1/: flow_s1_aio_submit.py  flow_s1_l0asp_submit.py  flow_s1_l1_submit.py  flow_s1_l2_submit.py  flow_s1_session_retrieve.py
flows/utils/: __init__.py  artifacts.py  copernicus_enum.py
manual_tests/: odata_tests_auxip.sh  odata_tests_cadip.sh  odata_tests_prip.sh
resources/cadip/sessions/: S1A_20241114143038056552.json
(+6 files in other folders)
